removing manifest file
so as to allow for easier coding without caching

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html style="height:100%;" manifest="main.manifest">
+<html style="height:100%;">
     <head>
         <title>autoSpace</title>
         <meta name="viewport" content="initial-scale=1,max-scale=1,user-scalable=no"/>
