--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 background:#fff;
                 z-index:100;
             }
-            #welcome,#views,#angle,.nav{
+            #welcome,#views,#angle,#dims,.nav{
                 display:none;
                 background:#fff;
                 z-index:100;
@@ -24,14 +24,6 @@
                 text-align:center;
             }
 
-            #top{
-                position:fixed;
-                background:#f5f5f5;
-                width:100%;
-                height:200px;
-                top:0;
-                z-index:-100;
-            }
         </style>
         <script>
             window.onload = function() {
@@ -41,14 +33,12 @@
                 space.screen = "welcome";
             }
             var space = {
-                screen: "loading"
+                screen: "loading",
+                views:[]
             };
         </script>
     </head>
     <body style="height:100%;">
-        <div id="top">
-
-        </div>
         <!-- loading screen -->
         <table id="loading" class="screen" style="height:100%;width:100%;">
             <tr style="height:100%;width:100%;">
@@ -135,6 +125,12 @@
                     <td></td>
                 </tr>
             </table>
+        </div>
+        <div id="dims">
+            <div id="aa">
+            <div id="vm">FV</div><div id="h">26</div><div id="w">60</div>
+            </div>
+            <div id="v">H:<input type="number"/>W:<input type="number"/></div>
         </div>
         <!-- nav -->
         <div class="nav">
